@@ -12,6 +12,8 @@ TODOs:
 language main: create defines only for tables with table_user
 blocks xoops_version: only if table_blocks
 
+templates in xoops_version user: only if table is user side
+
 
 Permissions:
 implement autoapprove
