@@ -6,6 +6,7 @@
 - fixed bug in creation of config files (goffy)
 - implementation of experience from wgtransifex (mamba/goffy)
 - fixed bug date in blocks (heyula/goffy)
+- replaced strtotime by \DateTime::createFromFormat (goffy)
 
 <h5>3.03 Alpha 5   [2020-06-09]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
 <hr>
